--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 800px;
-    margin-bottom: 2rem;
+    height: 400px;
+    margin-bottom: 5rem;
     text-align: center;
 }
 
@@ -64,10 +65,9 @@ body {
 #progress-bar-container {
     width: 100%;
     max-width: 900px;
-    margin-top: 1rem; 
     margin-bottom: 0; 
     position: relative;
-    top: -50px; 
+    top: -40px; 
 }
 
 
@@ -101,7 +101,7 @@ body {
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    top: -10px;
+    top: -8px;
     width: 100%;
     height: 40px;
 }
@@ -188,6 +188,11 @@ body {
 
     body {
         font-size: 0.9rem;
+    }
+    .timeline-container {
+        width: 90%; 
+        padding: 1rem; 
+        height: 40%;
     }
     .timeline-image {
         width:200px; 
